fix: change dispatch and receive products request